--- a/Server/package.json
+++ b/Server/package.json
@@ -1,22 +1,35 @@
 {
-  "name": "server",
+  "name": "node-express-mongodb",
   "version": "1.0.0",
-  "description": "",
+  "description": "Restful API with Node.js, Express and MongoDB",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+      "dev": "nodemon server.js",
+      "test": "jest --detectOpenHandles --coverage"
   },
-  "author": "Yassin",
+  "keywords": [
+      "nodejs",
+      "express",
+      "rest",
+      "api",
+      "mongodb"
+  ],
+  "author": "bezkoder",
   "license": "ISC",
   "dependencies": {
-    "colors": "^1.4.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "jest": "^27.5.1",
-    "mongoose": "^6.2.2",
-    "nodemon": "^2.0.15"
+      "body-parser": "^1.19.0",
+      "chai": "^4.3.4",
+      "chai-http": "^4.3.0",
+      "cors": "^2.8.5",
+      "express": "^4.17.1",
+      "jest": "^27.4.7",
+      "jest-express": "^1.12.0",
+      "joi": "^17.6.0",
+      "mongoose": "^5.8.10",
+      "nodemon": "^2.0.15",
+      "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+      "supertest": "^6.2.2"
   }
 }
