--- a/Client/electricity/Dockerfile
+++ b/Client/electricity/Dockerfile
@@ -1,10 +1,15 @@
+
 FROM node:17-alpine as builder
-WORKDIR /app
-COPY ./package.json /app/
-RUN npm install --force
-COPY . /app
-RUN npm run build
+WORKDIR /usr/app
+COPY ./package.json /usr/app
+RUN yarn install 
+COPY ./ /usr/app
+
+RUN yarn build
+
 FROM nginx:stable-alpine
-COPY --from=builder /app/build /usr/share/nginx/html
+COPY --from=builder /usr/app /usr/share/nginx/html
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
-EXPOSE 3000
+EXPOSE 4000
+
+CMD ["npm","start"]
