--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   frontend:
+    image: hyassin509/frontend:latest
     build: ./Client/
     ports:
       - "8081:8080"
@@ -9,13 +10,14 @@ services:
     links:
       - Server
   backend:
+    image: hyassin509/backend:latest
     build: ./Server/
     ports:
       - "5000:8080"
     depends_on:
       - "mongo"
   mongo:
-    image: mongo
+    image: hyassin509/mongo
     ports:
       - 27017:27017
 
