--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     depends_on:
       - "mongo"
   mongo:
-    image: mongo
+    image: hyassin509/mongo
     ports:
       - 27017:27017
 
